--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
 </head>
 <body>
-    
+    <div id="dropdown">
+        <ul>
+            <li><a href="#"> Qui suis je ?</a></li>
+            <li><a href="#"> Projets</a></li>
+            <li><a href="#"></a>TBD</a></li>
+            <li><a href="#">TBD</a></li>
+        </ul>
+    </div>
+    <div class="presentation">
+        <div>
+        <h1>Qui suis-je?</h1>
+        <p>
+            je suis un etudiant en L3 informatique passionne par les ordinateurs et les nouvelles technologies et surtout la programation.
+        </p>
+        </div>
+        <div class="pfp">
+            <figure>
+                <img src="" alt="" width=" " height="">
+             </figure>
+        </div>
+        <cite>
+            The universe has a beginning, but no end. — Infinite. The stars, too, have a beginning, but their own power leads to their destruction. — Finite.
+        </cite>
+        <cite>
+            Tous ces moments se perdront dans l'oubli... comme... les larmes... dans la pluie. Il est temps de mouri.
+        </cite>
+    </div>
 </body>
 </html>
