--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="./style.scss">
+    <title>Welcome</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
@@ -48,6 +48,11 @@
                 <h3>Snake</h3>
                 <p></p>
                 <a href="https://github.com/Ait-Cherif-M-hand/Snake-java" target="_blank">Voir sur GitHub</a>
+            </div>
+            <div class="project">
+                <h3>Jeux d'échecs</h3>
+                <p></p>
+                <a href="https://github.com/Ait-Cherif-M-hand/Chess-game" target="_blank">Voir sur GitHub</a>
             </div>
         </div>
     </section>
