--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
 
     <section id="about">
         <h2>Qui suis-je?</h2>
-        <p>
+        <div class="container">
+        <p class="text">
+            Bonjour Je suis <strong>AIT CHERIF M'hand</strong>.<br>
             Je suis un étudiant en L3 informatique passionné par les ordinateurs et les nouvelles technologies, surtout la programmation.
+            Motivé par une grande curiosité et une faim pour le défi ,j'aime utliser mon code pour résoudre toute sortes de puzzles.
         </p>
         <figure>
-            <img src="./pic.jpg" alt="Profile Picture">
+            <img src="./pic.jpg" alt="Profile Picture" class="image">
             <figcaption>Moi</figcaption>
         </figure>
+        </div>
         <blockquote>
             <p>"The universe has a beginning, but no end. — Infinite."</p>
         </blockquote>
@@ -35,23 +39,26 @@
             <p>"Tous ces moments se perdront dans l'oubli... comme... les larmes... dans la pluie."</p>
         </blockquote>
     </section>
+    <section>
+        <iframe src="https://github.com/AitcherifMhand/AitcherifMhand" style="height:200px;width:300px;" title="Readme"></iframe>
+    </section>
 
     <section id="projects">
         <h2>Projets</h2>
         <div class="projects-grid">
             <div class="project">
                 <h3>Pong</h3>
-                <p></p>
+                <p>Jeu pong en python</p>
                 <a href="https://github.com/Ait-Cherif-M-hand/Pong-clone" target="_blank">Voir sur GitHub</a>
             </div>
             <div class="project">
                 <h3>Snake</h3>
-                <p></p>
+                <p>Implementation de fameux jeu nokia en java avec les principes de la programmation orienté objet.</p>
                 <a href="https://github.com/Ait-Cherif-M-hand/Snake-java" target="_blank">Voir sur GitHub</a>
             </div>
             <div class="project">
                 <h3>Jeux d'échecs</h3>
-                <p></p>
+                <p>Implémentation d'un jeu d'échecs sur le Shell en C++. On peut jouer a 2 ou avec l'ordi.</p>
                 <a href="https://github.com/Ait-Cherif-M-hand/Chess-game" target="_blank">Voir sur GitHub</a>
             </div>
         </div>
