--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <section id="about">
         <h2>Qui suis-je?</h2>
         <div class="container">
-        <img src="./pic.jpg" alt="Profile Picture" class="image">
+        <figure>
+            <img src="./pic.jpg" alt="Profile Picture">
+            <figcaption>Moi</figcaption>
+        </figure>
         <p class="text">
             Bonjour Je suis <strong>AIT CHERIF M'hand</strong>.<br>
             Je suis un étudiant en L3 informatique passionné par les ordinateurs et les nouvelles technologies, surtout la programmation.
